1.4/_sources/cpp2doc_generated/triqs/hilbert_space/hilbert_space.txt
..
   Generated automatically using the command:
   c++2doc.py -N triqs /var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/doc/reference/doc_root.hpp --output_directory=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/build/doc/cpp2doc_generated --includes=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/ --includes=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/build/Config --compiler_options=-DTRIQS_BUILDING_LIBRARY --mako_location=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/tools/

.. highlight:: c

.. code-block:: c

    #include <triqs/hilbert_space/hilbert_space.hpp>

.. _hilbert_space:

hilbert_space
===============

**Synopsis**:

.. code-block:: c

      class hilbert_space;

A Hilbert space spanned from *all* fermionic Fock states generated by a given set of fundamental operators.







Member functions
-----------------

+--------------------------------------------------------+--------------------------------------------------------------------+
| Member function                                        | Comment                                                            |
+========================================================+====================================================================+
| :ref:`constructor <hilbert_space_constructor>`         | Construct a dummy Hilbert space of zero size                       |
+--------------------------------------------------------+--------------------------------------------------------------------+
| :ref:`size <hilbert_space_size>`                       | Return the total number of the fermionic Fock states in this space |
+--------------------------------------------------------+--------------------------------------------------------------------+
| :ref:`operator== != <hilbert_space_operator== !=>`     | Check two Hilbert spaces for equality                              |
+--------------------------------------------------------+--------------------------------------------------------------------+
| :ref:`has_state <hilbert_space_has_state>`             | Check if a given Fock state belongs to this space                  |
+--------------------------------------------------------+--------------------------------------------------------------------+
| :ref:`get_state_index <hilbert_space_get_state_index>` | Find the index of a given Fock state within this space             |
+--------------------------------------------------------+--------------------------------------------------------------------+
| :ref:`get_fock_state <hilbert_space_get_fock_state>`   | Return the `i`-th basis element as a Fock state                    |
+--------------------------------------------------------+--------------------------------------------------------------------+

.. toctree::
  :hidden:

   hilbert_space/constructor
   hilbert_space/size
   hilbert_space/operator== !=
   hilbert_space/has_state
   hilbert_space/get_state_index
   hilbert_space/get_fock_state

Non Member functions
-----------------------

+------------------------------------------------------------------------------+-----------------------------------------+
| Non member function                                                          | Comment                                 |
+==============================================================================+=========================================+
| :ref:`get_triqs_hdf5_data_scheme <hilbert_space_get_triqs_hdf5_data_scheme>` | Return name of the HDF5 scheme          |
+------------------------------------------------------------------------------+-----------------------------------------+
| :ref:`h5_write <hilbert_space_h5_write>`                                     | Write a Hilbert space to an HDF5 group  |
+------------------------------------------------------------------------------+-----------------------------------------+
| :ref:`h5_read <hilbert_space_h5_read>`                                       | Read a Hilbert space from an HDF5 group |
+------------------------------------------------------------------------------+-----------------------------------------+

.. toctree::
  :hidden:

   hilbert_space/get_triqs_hdf5_data_scheme
   hilbert_space/h5_write
   hilbert_space/h5_read